--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <prerequisites>
-    <maven>3.0</maven>
-  </prerequisites>
 
   <artifactId>hps-java</artifactId>
   <groupId>org.hps</groupId>
   <packaging>pom</packaging>
-  <version>4.5-SNAPSHOT</version>
+  <version>5.1-SNAPSHOT</version>
   <name>HPS Java</name>
   <description>HPS Java Maven Project</description>
   <url>http://www.lcsim.org/sites/hps/</url>
@@ -18,12 +15,12 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <dependency.locations.enabled>false</dependency.locations.enabled>
-    <lcsimVersion>4.2-SNAPSHOT</lcsimVersion>
+    <lcsimVersion>4.3</lcsimVersion>
     <skipSite>false</skipSite>
     <skipPlugin>false</skipPlugin>
-    <skipCheckstyle>false</skipCheckstyle>
     <additionalparam>-Xdoclint:none</additionalparam>
     <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
+    <junitVersion>4.13.1</junitVersion>
   </properties>
 
   <scm>
@@ -95,7 +92,7 @@
       </releases>
     </repository>
   </repositories>
-
+  
   <pluginRepositories>
     <pluginRepository>
       <id>freehep-maven-plugin-repo</id>
@@ -108,7 +105,7 @@
       <url>https://repo1.maven.org/maven2/</url>
     </pluginRepository>
   </pluginRepositories>
-
+  
   <modules>
     <module>analysis</module>
     <module>conditions</module>
@@ -136,61 +133,13 @@
     <module>util</module>
     <module>integration-tests</module>
   </modules>
-
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>${junitVersion}</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.lcsim</groupId>
-      <artifactId>lcsim-distribution</artifactId>
-      <version>${lcsimVersion}</version>
-      <type>pom</type>
-      <exclusions>
-        <exclusion>
-          <groupId>jdom</groupId>
-          <artifactId>jdom</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>commons-math</groupId>
-          <artifactId>commons-math</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>freehep-graphicsio-tests</groupId>
-          <artifactId>org.freehep</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>aida-test</groupId>
-          <artifactId>hep.aida</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.lcsim</groupId>
-          <artifactId>lcsim-analysis</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.lcsim</groupId>
-          <artifactId>lcsim-cal-calib</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.lcsim</groupId>
-          <artifactId>detector-data</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.lcsim</groupId>
-          <artifactId>lcsim-mc</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.lcsim</groupId>
-          <artifactId>lcsim-steering-files</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.lcsim</groupId>
-          <artifactId>lcsim-users</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
   </dependencies>
 
@@ -329,17 +278,20 @@
       <dependency>
         <groupId>org.jlab.coda</groupId>
         <artifactId>et</artifactId>
-        <version>16.0</version>
+<!--
+        <version>16.2</version> 
+-->
+        <version>14.1</version>
       </dependency>
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>18.0</version>
+        <version>30.1-jre</version>
       </dependency>
       <dependency>
         <groupId>org.reflections</groupId>
         <artifactId>reflections</artifactId>
-        <version>0.9.9-RC1</version>
+        <version>0.9.12</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
@@ -369,11 +321,92 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.11</version>
+        <version>${junitVersion}</version>
+      </dependency>      
+      <dependency>
+        <groupId>org.jdom</groupId>
+        <artifactId>jdom</artifactId>
+        <version>1.1</version>
+      </dependency>      
+      <dependency>
+        <groupId>commons-cli</groupId>
+        <artifactId>commons-cli</artifactId>
+        <version>1.3</version>
+      </dependency>
+      <!-- lcsim deps below here -->
+      <dependency>
+        <groupId>org.lcsim</groupId>
+        <artifactId>lcsim-event-processing</artifactId>
+        <version>${lcsimVersion}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.lcsim</groupId>
+        <artifactId>lcsim-aida</artifactId>
+        <version>${lcsimVersion}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>commons-math</groupId>
+            <artifactId>commons-math</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+          <groupId>org.lcsim</groupId>
+          <artifactId>lcsim-job-manager</artifactId>
+          <version>${lcsimVersion}</version>
+          <exclusions>
+            <exclusion>
+              <groupId>jdom</groupId>
+              <artifactId>jdom</artifactId>
+            </exclusion>
+          </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.lcsim</groupId>
+        <artifactId>lcsim-tracking</artifactId>
+        <version>${lcsimVersion}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.lcsim</groupId>
+        <artifactId>lcsim-vertexing</artifactId>
+        <version>${lcsimVersion}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.lcsim</groupId>
+        <artifactId>lcsim-event-heprep</artifactId>
+        <version>${lcsimVersion}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
     </dependencies>
   </dependencyManagement>
-
+  
   <build>
     <defaultGoal>install</defaultGoal>
     <extensions>
@@ -404,7 +437,6 @@
           <artifactId>lifecycle-mapping</artifactId>
           <version>1.0.0</version>
           <configuration>
-            <skip>${skipCheckstyle}</skip>
             <lifecycleMappingMetadata>
               <pluginExecutions>
                 <pluginExecution>
@@ -456,8 +488,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.6.1</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>1.8</source>
+          <target>1.8</target>
           <showWarnings>true</showWarnings>
           <showDeprecation>true</showDeprecation>
         </configuration>
@@ -514,7 +546,6 @@
         <artifactId>maven-checkstyle-plugin</artifactId>
         <version>2.17</version>
         <configuration>
-          <skip>${skipCheckstyle}</skip>
           <logViolationsToConsole>true</logViolationsToConsole>
           <consoleOutput>true</consoleOutput>
           <includeResources>true</includeResources>
@@ -598,7 +629,7 @@
               <report>plugins</report>
               <report>project-team</report>
             </reports>
-          </reportSet>
+          </reportSet>          
         </reportSets>
       </plugin>
       <plugin>
@@ -624,7 +655,7 @@
               <report>test-aggregate</report>
             </reports>
           </reportSet>
-        </reportSets>
+        </reportSets>                      
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -637,14 +668,14 @@
               <report>javadoc</report>
               <report>test-javadoc</report>
             </reports>
-          </reportSet>
+          </reportSet>        
           <reportSet>
             <id>aggregate</id>
             <inherited>false</inherited>
             <reports>
               <report>aggregate</report>
             </reports>
-          </reportSet>
+          </reportSet>                             
         </reportSets>
         <configuration>
           <source>1.7</source>
