Updates to online recon for 2021 run (#896)
* Use ET 16 instead of 14

* drivers and steering files for online recon

* online recon driver for 2021 KF tracking; still in test mode

* get track parameters referenced to target Z

* Rework processing of command line in client

* Minor rename of producer script

* Possible fix for problems with restarting stopped stations

* Make Matt's monitoring driver work with online recon

* Add check of aggregation flag

* Put remote init into a separate method

* Remove some debug prints

* Change lcsim builder default to 2019 version

* Fix bug in arg processing

* Simplify management of remote AIDA tree and make sure start and stop work properly with multiple stations

* Decrease log level msg

* Remove unused import

* Make sure target dir exists before copying

* Simplify AIDA remote init

* Minor changes to logging

* A few small updates to synchronization

* Change log msg

* Fix bug in updating settings

* Add optional setting for lcsim classpath

* Use lcsim classpath if set

* Add notifier using web sockets to improve plot updating

* Remove debug log msg

* Remove old import

* Revert to ET 14

* Fix error messages related to missing slf4j lib

* Move event timing to RemoteAidaDriver

* Remove debug print

* Set system properties for station name and remote tree binding

* Comment out setting that is not needed any longer

* A few improvements to plot aggregation; comment out low level logging so it runs as fast as possible

* Run plot aggregation with a fixed 5 second period in between

* Small change to print out

* Disable object overwriting in tree; add a few comments

* Allow ET version to be set using a property; default to 14.1

* Correct syntax error

* merged OnlineRecon2021KF/SeedTracker to new tracking independtent driver; made steering files to work with this; changed online-recon/pom.xml to include stuff need for ecal monitoring

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <additionalparam>-Xdoclint:none</additionalparam>
     <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
     <junitVersion>4.13.1</junitVersion>
+    <etVersion>14.1</etVersion>
   </properties>
   <scm>
     <connection>scm:git:git://github.com/jeffersonlab/hps-java.git</connection>
@@ -232,10 +233,8 @@
       <dependency>
         <groupId>org.jlab.coda</groupId>
         <artifactId>et</artifactId>
-<!--
-        <version>16.2</version> 
--->
-        <version>14.1</version>
+        <!--<version>16.2</version>--> 
+        <version>${etVersion}</version>
       </dependency>
       <dependency>
         <groupId>com.google.guava</groupId>
