--- a/evio/pom.xml
+++ b/evio/pom.xml
@@ -8,7 +8,7 @@
     <groupId>org.hps</groupId>
     <artifactId>hps-java</artifactId>
     <relativePath>../pom.xml</relativePath>
-    <version>5.1-SNAPSHOT</version>
+    <version>5.1</version>
   </parent>
   <dependencies>
     <dependency>
