--- a/tracking/pom.xml
+++ b/tracking/pom.xml
@@ -8,7 +8,7 @@
     <groupId>org.hps</groupId>
     <artifactId>hps-java</artifactId>
     <relativePath>../pom.xml</relativePath>
-    <version>5.1</version>
+    <version>5.2-SNAPSHOT</version>
   </parent>
   <build>
     <plugins>
