--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <name>HPS Java</name>
   <description>HPS Java Maven Project</description>
   <url>http://www.lcsim.org/sites/hps/</url>
+  
   <properties>
     <project.scm.id>hps-java-github</project.scm.id>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,11 +20,13 @@
     <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
     <junitVersion>4.13.1</junitVersion>
     <etVersion>14.1</etVersion>
+    <maven-release-plugin.version>3.8.6</maven-release-plugin.version>
   </properties>
+  
   <scm>
-    <connection>scm:git:git://github.com/jeffersonlab/hps-java.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/jeffersonlab/hps-java.git</developerConnection>
-    <url>http://github.com/jeffersonlab/hps-java</url>
+    <connection>scm:git:ssh://git@github.com:JeffersonLab/hps-java.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/JeffersonLab/hps-java.git</developerConnection>
+    <url>https://github.com/jeffersonlab/hps-java</url>
     <tag>HEAD</tag>
   </scm>
   <distributionManagement>
@@ -471,7 +474,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>2.5.3</version>
+        <version>${maven-release-plugin.version}</version>
+        <configuration>
+          <scmCommentPrefix>[hps-release skip]</scmCommentPrefix>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
