--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <artifactId>hps-java</artifactId>
   <groupId>org.hps</groupId>
   <packaging>pom</packaging>
-  <version>5.1-SNAPSHOT</version>
+  <version>5.1</version>
   <name>HPS Java</name>
   <description>HPS Java Maven Project</description>
   <url>http://www.lcsim.org/sites/hps/</url>
@@ -27,7 +27,7 @@
     <connection>scm:git:ssh://git@github.com:JeffersonLab/hps-java.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/JeffersonLab/hps-java.git</developerConnection>
     <url>https://github.com/jeffersonlab/hps-java</url>
-    <tag>HEAD</tag>
+    <tag>hps-java-5.1</tag>
   </scm>
   <distributionManagement>
     <site>
