--- a/recon/pom.xml
+++ b/recon/pom.xml
@@ -20,6 +20,11 @@
       <groupId>org.lcsim</groupId>
       <artifactId>lcsim-vertexing</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.javatuples</groupId>
+      <artifactId>javatuples</artifactId>
+      <version>1.2</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
