--- a/tracking/pom.xml
+++ b/tracking/pom.xml
@@ -50,5 +50,10 @@
       <groupId>org.lcsim</groupId>
       <artifactId>lcsim-tracking</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.freehep</groupId>
+      <artifactId>freehep-rootio</artifactId>
+      <version>2.6</version>
+    </dependency>
   </dependencies>
 </project>
