--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,5 @@
-name: release version
-
-on:
-  push:
-    branches:
-      - master
+name: test release
+on: [published]
 
 jobs:
   build:
@@ -17,9 +13,9 @@ jobs:
       with:
         maven-args: "clean install -DskipTests"
 
-    - name: Release
-      uses: qcastel/github-actions-maven-release@master
-      env:
-        JAVA_HOME: /usr/lib/jvm/java-11-openjdk/
-      with:
-        maven-args: "-Dmaven.javadoc.skip=true -DskipTests -DskipITs -Dmaven.deploy.skip=true"
+#    - name: Release
+#      uses: qcastel/github-actions-maven-release@master
+#      env:
+#        JAVA_HOME: /usr/lib/jvm/java-11-openjdk/
+#      with:
+#        maven-args: "-Dmaven.javadoc.skip=true -DskipTests -DskipITs -Dmaven.deploy.skip=true"
